Fixed bug on iOS ContrastCheck scrolling to top of modal after pressing button because of FocusTrap

--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -988,10 +988,13 @@ section
         h4
             font-size: 22px
         button
-            top: 16px
-            right: 16px
-            width: 22px
-            height: 22px
+            top: 3px
+            right: 3px
+            width: 50px
+            height: 50px
+            img
+                width: 28px
+                height: 28px
 
     .standard-not-met, .standard-met
         height: 48px
